2016-06-26 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Revert Revision 66556: Require saltedpasswords to be installed
	* Revert Revision 66559: Require felogin, rsaauth and saltedpasswords
	* Revert Revision 66567: Always check for required rsaauth
	* Fix t3lib_div::intval_positive not available in TYPO3 6.0 in tx_srfeuserregister_data

2013-04-02 Franz Holzinger  <franz@ttproducts.de>
	* replace PHP constant SR_FEUSER_REGISTER_EXTkey by SR_FEUSER_REGISTER_EXT
	* remove constants from div2007

2013-03-16 Franz Holzinger  <franz@ttproducts.de>
	* new feature: control the user group generation by comparing of the entries in a XML file

2013-02-19 Franz Holzinger  <franz@ttproducts.de>
	* support for DirectMail fields even if it is not installed any more

2012-10-27 Franz Holzinger  <franz@ttproducts.de>
	* use global $GLOBALS['TCA'][$theTable] instead of internal $this->TCA variable

2012-10-26 Franz Holzinger  <franz@ttproducts.de>
	* replace auto_login_key from dataArray into its own variable

2012-10-22 Franz Holzinger  <franz@ttproducts.de>
	* restructuring

2012-10-18 Franz Holzinger  <franz@ttproducts.de>
	* Fix bug: Do not continue if the saving of the user data went wrong

2012-10-15 Franz Holzinger  <franz@ttproducts.de>
	* new feature: house_no which contains the house number for the given street

2012-10-10 Franz Holzinger  <franz@ttproducts.de>
	* Fix bug #35796: you must add the server timezone in seconds after the usage of mktime if the server time is set (serverTimeZone)

2012-10-03 Franz Holzinger  <franz@ttproducts.de>
	* return a boolean FALSE in decryptPasswordForAutoLogin if there is a problem with the rsaauth backend decryption
	* do not require rsaauth to be installed

2012-10-02 Franz Holzinger  <franz@ttproducts.de>
	* return a boolean FALSE if there is a problem with the saltedpasswords
	* do not require saltedpasswords to be installed

2012-09-11 Franz Holzinger  <franz@ttproducts.de>